repeat roll attack

--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -176,6 +176,11 @@
         {{/unless}}
     </div>
 
+    <div class="form-group">
+        <label for="repeat">Repeat attack</label>
+        <input id="repeat" type="number" name="repeat" value="{{ repeat }}" />
+    </div>
+
     <div class="dialog-buttons flex">
         <button type="submit">Roll</button>
     </div>
